--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,20 +1,12 @@
 ---
-
+import BaseLayout from "../layouts/BaseLayout.astro"
+import BlogPost from "../components/BlogPost.astro"
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true}))
+const pageTitle = "The Blog Page"
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Blog</title>
-	</head>
-	<body>
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/blog">Blog</a>
-		<h1>Blog Page</h1>
-		<p>This is where I will post about my journey learning astro.</p>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<p>Thi is where the posts live.</p>
+	<ul>
+		{allPosts.map((post:any) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
+	</ul>
+</BaseLayout>
