--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,9 +1,30 @@
 ---
 
 ---
-<div class="nav-links">
- <a href="/">Home</a>
- <a href="/about">About</a>
- <a href="/blog">Blog</a>
- <a href="/tags">Tags</a>   
-</div>
+<div class="navbar bg-base-100 shadow-sm">
+    <div class="navbar-start">
+      <div class="dropdown">
+        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
+        </div>
+        <ul
+          tabindex="0"
+          class="menu menu-lg dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+          <li class="font-bold"><a href="/blog">Blog</a></li>
+          <li class="font-bold"><a href="/tags">Tags</a></li>
+          <li class="font-bold"><a href="/about">About</a></li>
+        </ul>
+      </div>
+      <a href="/" class="btn btn-ghost text-xl">Wrench Rescue</a>
+    </div>
+    <div class="navbar-center hidden lg:flex">
+      <ul class="menu menu-horizontal px-1">
+        <li class="text-2xl font-bold"><a href="/blog">Blog</a></li>
+        <li class="text-2xl font-bold"><a href="/tags">Tags</a></li>
+        <li class="text-2xl font-bold"><a href="/about">About</a></li>
+      </ul>
+    </div>
+    <div class="navbar-end">
+      <a href="/projects" class="btn">Projects</a>
+    </div>
+  </div>
