--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,35 +1,30 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
+import Prose from "../components/Prose.astro";
 const { frontmatter } = Astro.props;
 ---
 <BaseLayout pageTitle={frontmatter.title}>
-    <p>Published On: {frontmatter.pubDate.toString().slice(0,10)}</p>
-    <p><em>{frontmatter.description}</em></p>
-    <p>Written by {frontmatter.author}</p>
+  <Prose>
+    <div class="py-4 text-center">
+      <span class="">Published: {frontmatter.pubDate.toLocaleDateString()} | By {frontmatter.author}</span>
+      <p><em>{frontmatter.description}</em></p>
+    </div>
+
     <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
 
-    <div class="tags">
+    <div class="tags gap-2">
         {frontmatter.tags.map((tag: string) => (
-        <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>))}
+          <div class="badge badge-soft badge-secondary"><a href={`/tags/${tag}`}>{tag}</a></div>
+        ))}
     </div>
     <slot/>
+  </Prose>
+
 </BaseLayout>
 <style>
-    a {
-      color: #00539F;
-    }
   
     .tags {
       display: flex;
       flex-wrap: wrap;
-    }
-  
-    .tag {
-      margin: 0.25em;
-      border: dotted 1px #a1a1a1;
-      border-radius: .5em;
-      padding: .5em 1em;
-      font-size: 1.15em;
-      background-color: #F8FCFD;
     }
   </style>
